[package]
name = "node-runtime"
version = "0.1.0"
authors = ["nuts.finance"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/nutsfinance/stable-asset"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

pallet-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
pallet-assets = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
pallet-grandpa = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
pallet-randomness-collective-flip = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
pallet-sudo = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
pallet-transaction-payment = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
frame-executive = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e", default-features = false }
sp-consensus-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e", default-features = false }
sp-offchain = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
sp-session = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
sp-transaction-pool = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
sp-version = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
orml-benchmarking = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", rev = "5fb024c074a6a367e7252c52e0f09372e1c69c18", default-features = false, optional = true }

# Used for runtime benchmarking
frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e", optional = true }
frame-system-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e", optional = true }
hex-literal = { version = "0.3.1", optional = true }

# Used for the node's RPCs
frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }

nutsfinance-stable-asset = { version = "0.1.0", default-features = false, path = "../pallets/stable-asset", package = "nutsfinance-stable-asset" }

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate.git', rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"pallet-aura/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-io/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"nutsfinance-stable-asset/std",
	"orml-benchmarking/std",
]
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"hex-literal",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"orml-benchmarking",
]
