[package]
name = "node-runtime"
version = "0.1.0"
authors = ["nuts.finance"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/nutsfinance/stable-asset"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

pallet-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
pallet-assets = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
pallet-grandpa = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
pallet-randomness-collective-flip = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
pallet-sudo = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
pallet-transaction-payment = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
frame-executive = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26", default-features = false }
sp-consensus-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26", default-features = false }
sp-offchain = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
sp-session = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
sp-transaction-pool = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
sp-version = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
orml-benchmarking = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", rev = "5fb024c074a6a367e7252c52e0f09372e1c69c18", default-features = false, optional = true }

# Used for runtime benchmarking
frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26", optional = true }
frame-system-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26", optional = true }
hex-literal = { version = "0.3.1", optional = true }

# Used for the node's RPCs
frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }

nutsfinance-stable-asset = { version = "0.1.0", default-features = false, path = "../pallets/stable-asset", package = "nutsfinance-stable-asset" }
nutsfinance-stable-asset-xcm = { version = "0.1.0", default-features = false, path = "../pallets/stable-asset-xcm", package = "nutsfinance-stable-asset-xcm" }

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"pallet-aura/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-io/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"nutsfinance-stable-asset/std",
	"orml-benchmarking/std",
]
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"hex-literal",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"orml-benchmarking",
]
