[package]
authors = ["nuts.finance"]
description = "Substrate-based runtime version of NUTS stable assets."
edition = "2021"
name = "nutsfinance-stable-asset"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/nutsfinance/stable-asset"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"

[dev-dependencies]
serde = { version = "1.0.101" }

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"

[dev-dependencies.pallet-balances]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"sp-runtime/std",
]

[patch.crates-io]
# TODO: https://github.com/paritytech/substrate/pull/11707
syn = { git = "https://github.com/dtolnay/syn", rev = "19b3f0b53525ac7ab0882882a822adbd874dbe8c" }
