[package]
authors = ["nuts.finance"]
description = "Substrate-based runtime version of NUTS stable assets."
edition = "2018"
name = "nutsfinance-stable-asset"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/nutsfinance/stable-asset"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63"

[dev-dependencies]
serde = { version = "1.0.101" }

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63"

[dev-dependencies.pallet-balances]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
  "sp-std/std",
	"sp-runtime/std",
]
